# dotnet-ai-kit

./: .editorconfig  .gitignore  .lsp.json  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LICENSE  README.md  SECURITY.md  dotnet-ai-kit.slnx  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.dotnet-ai-kit/: codex-round3-prompt.txt  config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.logs/: codex-round4-out.txt
agents/: api-designer.md  command-architect.md  controlpanel-architect.md  cosmos-architect.md  devops-engineer.md  docs-engineer.md  dotnet-ai-architect.md  dotnet-architect.md  ef-specialist.md  gateway-architect.md  processor-architect.md  query-architect.md  reviewer.md  test-engineer.md
agents-claude/: api-designer.md  command-architect.md  controlpanel-architect.md  cosmos-architect.md  devops-engineer.md  docs-engineer.md  dotnet-ai-architect.md  dotnet-architect.md  ef-specialist.md  gateway-architect.md  processor-architect.md  query-architect.md  reviewer.md  test-engineer.md
agents-copilot-templates/: agent.md.j2  copilot-instructions.md.j2  instructions-path.md.j2
agents-source/: api-designer.md  command-architect.md  controlpanel-architect.md  cosmos-architect.md  devops-engineer.md  docs-engineer.md  dotnet-ai-architect.md  dotnet-architect.md  ef-specialist.md  gateway-architect.md  processor-architect.md  query-architect.md  reviewer.md  test-engineer.md
artifacts/: manifest.yml
commands/: add-aggregate.md  add-crud.md  add-endpoint.md  add-entity.md  add-event.md  add-page.md  add-tests.md  analyze.md  checkpoint.md  clarify.md  configure.md  detect.md  do.md  docs.md  explain.md  implement.md  init.md  learn.md  plan.md  pr.md  review.md  specify.md  status.md  tasks.md  undo.md  verify.md  wrap-up.md
config/: mcp-permissions.json  permissions-full.json  permissions-minimal.json  permissions-standard.json
docs/: architecture-profiles.md  architecture.md  extension-development.md  migration-v1.md  multi-repo-cqrs.md  release-notes-v1.0.md  setup-claude-code.md  setup-codex-cli.md  setup-copilot.md  setup-cursor.md  unmanaged-paths.md
hooks/: hooks.json  post-edit-format.sh  post-scaffold-restore.sh  pre-bash-guard.sh  pre-commit-lint.sh  pretooluse-arch-profile.sh  pretooluse-domain-rules.sh  pretooluse-inject-rules.ps1  pretooluse-inject-rules.py  session-start-bootstrap.sh  stop-verification-gate.ps1  stop-verification-gate.py
knowledge/: clean-architecture-patterns.md  concurrency-patterns.md  cosmos-patterns.md  cqrs-patterns.md  ddd-patterns.md  dead-letter-reprocessing.md  deployment-patterns.md  documentation-standards.md  event-sourcing-flow.md  event-versioning.md  grpc-patterns.md  modular-monolith-patterns.md  outbox-pattern.md  service-bus-patterns.md  testing-patterns.md  vsa-patterns.md
planning/: 01-vision.md  02-skills-inventory.md  03-agents-design.md  04-commands-design.md  05-rules-design.md  06-build-roadmap.md  06-feature-019-outcomes.md  07-project-structure.md  08-multi-repo-orchestration.md  09-review-and-coderabbit.md  10-permissions-config.md  11-expanded-skills-inventory.md  12-version-roadmap.md  13-handoff-schemas.md  14-generic-skills-spec.md  15-template-content.md  16-cli-implementation.md  17-code-generation-flows.md  18-microservice-skills-spec.md  19-optimization-roadmap.md  20-rewrite-strategy-net10.md  21-v2-architecture-blueprint.md  22-v2-project-structure.md  23-v2-artifact-catalog.md  24-v2-selector-gates-lifecycle-multirepo.md  25-v2-requirements.md  26-v2-build-plan-and-decisions.md  27-post-022-fidelity-and-defect-audit.md  28-v2-artifact-and-tooling-enhancement-plan.md  29-v2-execution-plan-fidelity-and-enhancement.md  30-appendix-all-artifacts.md  30-artifacts-content-review.md  HANDOFF.md  token-reduction-report.html
prompt/: 023-v2-corpus-correctness-and-delivery-foundation.md  024-v2-profile-rule-and-dynamic-delivery.md  025-v2-dotnet-script-and-tooling-cleanup.md  026-v2-progressive-disclosure-and-triggering.md  027-v2-analyzers-and-deterministic-enforcement.md  028-v2-expansion-skills-and-agents.md  029-v2-kit-mcp-server.md  030-v2-release-distribution-and-fidelity-closeout.md  README.md
prompts/: architecture-enforcement-and-multi-repo.md
rules/: api-design.md  architecture.md  async-concurrency.md  coding-style.md  configuration.md  data-access.md  error-handling.md  existing-projects.md  localization.md  multi-repo.md  naming.md  observability.md  performance.md  security.md  testing.md  tool-calls.md
schemas/: claude-plugin.schema.json  codex-plugin.schema.json  cursor-plugin.schema.json  hooks-json.schema.json  project-yml.schema.json
scripts/: check.ps1  check.py  doc_lint.py  gen_agents_claude.py  gen_claude_plugin_manifest.py  (+10 more)
(+1166 files in other folders)
