[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotnet-ai-kit"
version = "1.0.0"
description = "AI dev tool plugin for the full .NET development lifecycle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "dotnet-ai-kit contributors" },
]
keywords = ["dotnet", "ai", "cli", "code-generation", "cqrs", "microservices", "claude-code-plugin", "agent-skills", "clean-architecture", "vertical-slice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.24.1",
    "pydantic>=2.0.0",
    "jinja2>=3.1.6",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
    "questionary>=2.0.0",
    "filelock>=3.12.0",
]

[project.scripts]
dotnet-ai = "dotnet_ai_kit.cli:app"

[project.urls]
Homepage = "https://github.com/FaysilAlshareef/dotnet-ai-kit"
Repository = "https://github.com/FaysilAlshareef/dotnet-ai-kit"

[tool.hatch.build.targets.wheel]
packages = ["src/dotnet_ai_kit"]

[tool.hatch.build.targets.wheel.force-include]
"commands" = "dotnet_ai_kit/bundled/commands"
"rules" = "dotnet_ai_kit/bundled/rules"
"agents" = "dotnet_ai_kit/bundled/agents"
"skills" = "dotnet_ai_kit/bundled/skills"
"knowledge" = "dotnet_ai_kit/bundled/knowledge"
"templates" = "dotnet_ai_kit/bundled/templates"
"config" = "dotnet_ai_kit/bundled/config"
"profiles" = "dotnet_ai_kit/bundled/profiles"
"prompts" = "dotnet_ai_kit/bundled/prompts"
".claude-plugin" = "dotnet_ai_kit/bundled/.claude-plugin"
"hooks" = "dotnet_ai_kit/bundled/hooks"
".mcp.json" = "dotnet_ai_kit/bundled/.mcp.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: requires CLAUDE_CODE_SMOKE=1 and claude on PATH",
    "windows_only: requires sys.platform == 'win32'",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# violation_harness.py uses dense tabular Violation declarations; readability
# wins over column 100. cli.py keeps a few long template strings.
"scripts/violation_harness.py" = ["E501"]
"scripts/rewrite_skill_frontmatter.py" = ["E501"]
"src/dotnet_ai_kit/cli.py" = ["E501"]
"tests/integration/test_end_to_end_install.py" = ["E501"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.1.0",
]
